--- a/validators/validators_text.yaml
+++ b/validators/validators_text.yaml
@@ -19,7 +19,7 @@ validators-text:
   - tag: validate-as-CIA
     text:
       output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched the regular expression pattern '{{ config.pattern }}'"
-      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' must begin with either; '{{ values.confidentiality }}:', '{{ values.integrity }}:' or '{{ values.availability }}:' (values 'C:', 'I:', 'A:' are also accepted as shorthand)"
+      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' must begin with either; '{{ translate.confidentiality }}:', '{{ translate.integrity }}:' or '{{ translate.availability }}:' (values 'C:', 'I:', 'A:' are also accepted as shorthand)"
   - tag: validate-from-template
     text:
       output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched value from template"
