--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,50 @@
-atlassian-python-api==3.14.0
+atlassian-python-api==3.20.1
 attrs==21.4.0
 beautifulsoup4==4.10.0
-boto3==1.20.54
-botocore==1.23.54
-cachetools==4.2.4
-certifi==2021.5.30
-charset-normalizer==2.0.6
+boto3==1.21.30
+botocore==1.24.30
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 cssselect==1.1.0
 Deprecated==1.2.13
-google-api-core==2.1.0
-google-api-python-client==2.24.0
-google-auth==2.2.1
+google-api-core==2.7.1
+google-api-python-client==2.42.0
+google-auth==2.6.2
 google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.6
-googleapis-common-protos==1.53.0
+google-auth-oauthlib==0.5.1
+googleapis-common-protos==1.56.0
 html-table-parser-python3==0.2.0
-httplib2==0.19.1
-idna==3.2
+httplib2==0.20.4
+idna==3.3
 iniconfig==1.1.1
-Jinja2==3.0.3
-jmespath==0.10.0
-jsonpickle==2.0.0
-lxml==4.6.3
-MarkupSafe==2.0.1
-oauthlib==3.1.1
+Jinja2==3.1.1
+jmespath==1.0.0
+jsonpickle==2.1.0
+lxml==4.8.0
+MarkupSafe==2.1.1
+oauthlib==3.2.0
 packaging==21.3
 pluggy==1.0.0
-protobuf==3.18.1
+protobuf==3.19.4
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pyparsing==2.4.7
+pyparsing==3.0.7
 pyquery==1.4.3
-pytest==6.2.5
+pytest==7.1.1
 python-dateutil==2.8.2
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-ruamel.yaml==0.17.16
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
-s3transfer==0.5.1
+s3transfer==0.5.2
 sh==1.14.2
 six==1.16.0
-soupsieve==2.2.1
+soupsieve==2.3.1
 toml==0.10.2
-uritemplate==3.0.1
-urllib3==1.26.7
-wrapt==1.12.1
+tomli==2.0.1
+uritemplate==4.1.1
+urllib3==1.26.9
+wrapt==1.14.0
