Mainly added using git from a container.  Various bug fixes and re-factoring

--- a/manage/manage_config.yaml
+++ b/manage/manage_config.yaml
@@ -4,6 +4,7 @@ manage-config:
   storage:
     gitrepo:
       remote: "git@github.com-threat-models:samadhicsec/threat-models.git"
+      #remote: "git@github.com:samadhicsec/threat-models.git"
       default-branch: "approved"
       base-storage-dir: "/tmp"
     index:
