--- a/verifiers/default_tag_mapping.yaml
+++ b/verifiers/default_tag_mapping.yaml
@@ -51,6 +51,7 @@ tag-mapping:
       - ref/components-details-data/name
       - tref/functional-asset-data/storage-location/template-approved
       - tref/technical-asset-data/storage-location/template-approved
+      - exclude/value/in-memory
   - key-name: functional-asset-affected
     tags:
       - ref/functional-asset-data/name
