--- a/verifiers/verifiers_texts.yaml
+++ b/verifiers/verifiers_texts.yaml
@@ -9,6 +9,7 @@ output-texts:
   no-covering-threat-fix: "The {{ threats_and_controls_table }} must include a row where the '{{ asset_key.colname }}' column includes one of; the asset name i.e. '{{ issue_key.value }}', the asset type i.e. '{{ issue_key.row.type.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
   missing-mandatory: "A value for the column '{{ issue_key.colname }}' is mandatory"
   missing-conditional-mandatory: "The value for the field '{{ depends_on_key.colname }}' is '{{ depends_on_key.value }}', so a value for the field '{{ issue_key.colname }}' is mandatory"
+  missing-conditional-mandatory-any-value: "A value for the field '{{ depends_on_key.colname }}' exists, so a value for the field '{{ issue_key.colname }}' is mandatory"
   document-unique: "The value '{{ entryvalue }}' in field '{{ entryname }}' must be unique in the document amongst the following section/field name pairs - {}.  Duplicate value(s) were found in the following section/field name pairs - {}"
   not-unique: "The '{{ issue_key.colname }}' column with value '{{ issue_key.value }}' must be unique.  See error-data for locations with the same values"
   not-unique-fix: "The value must be unique so it can be used throughout the document without confusion about what is being referred to.  You can change the value at either location to make it unique.  See fixdata for the locations it must be unique with respect to" 
