Fixed parsing References, now only picks up ul/li before Components header

--- a/schemes/confluence-scheme-1.0.yaml
+++ b/schemes/confluence-scheme-1.0.yaml
@@ -228,7 +228,7 @@ scheme:
           get-data:
             query:
               type: html-ul
-              xpath: "//html/body/h2[text()='References']/following::ul/li"
+              xpath: "//html/body/h2[text()='References']/following::ul[following::h1[1][text()='Components']]/li"
           map-data:
             - key: "description"
               value:
