--- a/schemes/googledoc-scheme-1.0.yaml
+++ b/schemes/googledoc-scheme-1.0.yaml
@@ -568,7 +568,10 @@ scheme:
             - key: "operational-activity"
               value:
                 map-data:
-                  - key: "question"
+                  - key: 
+                      name: "question"
+                      tags:
+                        - row-identifier
                     value: 
                       get-data:
                         query:
