--- a/manage/manage_texts.yaml
+++ b/manage/manage_texts.yaml
@@ -1,23 +1,26 @@
 ---
 output-texts:
-  success-indexdata: "The following index data was retrieved for threat model with ID {{ ID }}."
-  success-create: "The following entry was successfully added to the threat model index.  Please ask an approver to approve the change."
-  success-approver: "The following metadata for threat model with ID '{{ ID }}' was submitted, it is not approved until the changes are merged to the official record"
-  success-submitter: "The following metadata for threat model with ID '{{ ID }}' was submitted, please let an approver know"
-  empty-id: "The threat model at this location has a empty ID.  Please populate the ID field and re-submit"
-  no-version-history: "Could not find entry in version history table for threat model current version '{{ current_version }}'"
-  no-index-ID: "Could not find metadata index entry for ID '{{ ID }}'.  Valid IDs must exist in the metadata index file.  New IDs can be created using manage.craete"
-  index-entry-exists: "Cannot create ID for threat model with scheme '{{ scheme }}' and location '{{ location }}' as that scheme/location is used by threat model with ID '{{ ID }}'"
-  cant-submit-not-in-metadata-index: "The threat model with ID '{{ ID }}' that you are trying to submit does not exist in the metadata.  Please call the 'manage.create' action and ensure the updates are merged."
-  current-approved-mismatched-version: "The submitted threat model with ID '{{ ID }}' has a current version of '{{ current_version }}' and an approved version of '{{ approved_version }}', both of which are approved in the version history, but if the current version is approved in the version history then the approved version must match the current version.  Please update the approved version in the threat model"
-  cant-update-approved-version: "The submitted threat model with ID '{{ ID }}' has a current and approved version of '{{ approved_version }}' which is the same as the currently approved version for this threat model.  Updating approved versions of threat models is not supported.  Please increase the version of the threat model"
-  current-and-approved-not-equal: "The submitted threat model with ID '{{ ID }}' has a current version of '{{ current_version }}' which is different to its approved version '{{ approved_version }}', but since both versions are approved, they should be equal to the more recent, between the current or approved version"
-  approved-version-not-approved: "The submitted threat model with ID '{{ ID }}' has an approved version '{{ approved_version }}', but this version is not approved in the Version History table.  Please get an approver to approve this version, or change the approved version to the last version that was marked as approved in the Version History table"
-  approved-version-not-updated: "The submitted threat model with ID '{{ ID }}' has current_version '{{ current_version }}' (which is marked as approved in the Version History table), but an approved version '{{ approved_version }}'.  If the current version is approved, the approved version should match it.  Please update the approved version in the Details Table"
-  status-not-approved: "The submitted threat model with ID '{{ ID }}' has an approved version '{{ approved_version }}', which has been approved, but the status is not correct, it needs to be {{ approved_status }}"
-  no-document-id: "No document ID was found for the threat model at location {{ location }}"
-  no-approved-version: "There is no currently approved version of the Threat Model.  There needs to be an existing approved version, before you can check if changes require re-approval."
-  approved-version-expired: "The approved version for this Threat Model has expired as the approval was greater than {{ approval_expiry_days }} days ago.  A new approval is required, regardless of the changes."
-  approved-version-didnt-load: "Unable to load the approved version for comparison.  See logs for more details."
-  approval-required: "An approval is required for the updates made to the Threat Model."
-  no-approval-required: "No approval is required for the updates made to the Threat Model."
+  default:
+    manage.create-commit-message: "Updated index file"
+    manage.submit-commit-message: "Update to {{ ID }}"
+    success-indexdata: "The following index data was retrieved for threat model with ID {{ ID }}."
+    success-create: "The following entry was successfully added to the threat model index.  Please ask an approver to approve the change."
+    success-approver: "The following metadata for threat model with ID '{{ ID }}' was submitted, it is not approved until the changes are merged to the official record"
+    success-submitter: "The following metadata for threat model with ID '{{ ID }}' was submitted, please let an approver know"
+    empty-id: "The threat model at this location has a empty ID.  Please populate the ID field and re-submit"
+    no-version-history: "Could not find entry in version history table for threat model current version '{{ current_version }}'"
+    no-index-ID: "Could not find metadata index entry for ID '{{ ID }}'.  Valid IDs must exist in the metadata index file.  New IDs can be created using manage.craete"
+    index-entry-exists: "Cannot create ID for threat model with scheme '{{ scheme }}' and location '{{ location }}' as that scheme/location is used by threat model with ID '{{ ID }}'"
+    cant-submit-not-in-metadata-index: "The threat model with ID '{{ ID }}' that you are trying to submit does not exist in the metadata.  Please call the 'manage.create' action and ensure the updates are merged."
+    current-approved-mismatched-version: "The submitted threat model with ID '{{ ID }}' has a current version of '{{ current_version }}' and an approved version of '{{ approved_version }}', both of which are approved in the version history, but if the current version is approved in the version history then the approved version must match the current version.  Please update the approved version in the threat model"
+    cant-update-approved-version: "The submitted threat model with ID '{{ ID }}' has a current and approved version of '{{ approved_version }}' which is the same as the currently approved version for this threat model.  Updating approved versions of threat models is not supported.  Please increase the version of the threat model"
+    current-and-approved-not-equal: "The submitted threat model with ID '{{ ID }}' has a current version of '{{ current_version }}' which is different to its approved version '{{ approved_version }}', but since both versions are approved, they should be equal to the more recent, between the current or approved version"
+    approved-version-not-approved: "The submitted threat model with ID '{{ ID }}' has an approved version '{{ approved_version }}', but this version is not approved in the Version History table.  Please get an approver to approve this version, or change the approved version to the last version that was marked as approved in the Version History table"
+    approved-version-not-updated: "The submitted threat model with ID '{{ ID }}' has current_version '{{ current_version }}' (which is marked as approved in the Version History table), but an approved version '{{ approved_version }}'.  If the current version is approved, the approved version should match it.  Please update the approved version in the Details Table"
+    status-not-approved: "The submitted threat model with ID '{{ ID }}' has an approved version '{{ approved_version }}', which has been approved, but the status is not correct, it needs to be {{ approved_status }}"
+    no-document-id: "No document ID was found for the threat model at location {{ location }}"
+    no-approved-version: "There is no currently approved version of the Threat Model.  There needs to be an existing approved version, before you can check if changes require re-approval."
+    approved-version-expired: "The approved version for this Threat Model has expired as the approval was greater than {{ approval_expiry_days }} days ago.  A new approval is required, regardless of the changes."
+    approved-version-didnt-load: "Unable to load the approved version for comparison.  See logs for more details."
+    approval-required: "An approval is required for the updates made to the Threat Model."
+    no-approval-required: "No approval is required for the updates made to the Threat Model."
