--- a/validators/validators_text.yaml
+++ b/validators/validators_text.yaml
@@ -2,25 +2,31 @@
 validators-text:
   - tag: validate-as-version
     text:
-      output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched the regular expression pattern '{{ config.pattern }}'"
-      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' does not match the regular expression pattern '{{ config.pattern }}'"
+      default:
+        output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched the regular expression pattern '{{ config.pattern }}'"
+        output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' does not match the regular expression pattern '{{ config.pattern }}'"
   - tag: validate-as-date
     text:
-      output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' is a valid date"
-      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' is an invalid date"
+      default:
+        output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' is a valid date"
+        output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' is an invalid date"
   - tag: validate-as-single-entry
     text:
-      output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matches just a single entry i.e. no newlines were found"
-      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' must contain a single value, which does not contain a newline.  If you need to enter two or more values then please use multiple rows (if supported by the table)"
+      default:
+        output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matches just a single entry i.e. no newlines were found"
+        output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' must contain a single value, which does not contain a newline.  If you need to enter two or more values then please use multiple rows (if supported by the table)"
   - tag: validate-as-yes-no
     text:
-      output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched the regular expression pattern '{{ config.pattern }}'"
-      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' does not match the regular expression pattern '{{ config.pattern }}'"
+      default:
+        output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched the regular expression pattern '{{ config.pattern }}'"
+        output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' does not match the regular expression pattern '{{ config.pattern }}'"
   - tag: validate-as-CIA
     text:
-      output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched the regular expression pattern '{{ config.pattern }}'"
-      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' must begin with either; '{{ translate.confidentiality }}:', '{{ translate.integrity }}:' or '{{ translate.availability }}:' (values 'C:', 'I:', 'A:' are also accepted as shorthand)"
+      default:
+        output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched the regular expression pattern '{{ config.pattern }}'"
+        output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' must begin with either; '{{ translate.confidentiality }}:', '{{ translate.integrity }}:' or '{{ translate.availability }}:' (values 'C:', 'I:', 'A:' are also accepted as shorthand)"
   - tag: validate-from-template
     text:
-      output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched value from template"
-      output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' does not match a template value"
+      default:
+        output_text_valid: "Column '{{ key.colname }}' with value '{{ key.value }}' matched value from template"
+        output_text_invalid: "Column '{{ key.colname }}' with value '{{ key.value }}' does not match a template value"
