--- a/utils/output_texts.yaml
+++ b/utils/output_texts.yaml
@@ -1,6 +1,7 @@
 ---
 output-texts:
-  information: "{{ translate.information }}"
-  success: "{{ translate.success }}"
-  error: "{{ translate.error }}"
-  internal-error: "An internal error occurred, please see logs for more detail"
+  default:
+    information: "{{ translate.information }}"
+    success: "{{ translate.success }}"
+    error: "{{ translate.error }}"
+    internal-error: "An internal error occurred, please see logs for more detail"
