Support storing a plain version of an approved TM

--- a/manage/manage_config.yaml
+++ b/manage/manage_config.yaml
@@ -18,6 +18,7 @@ manage-config:
     index-filename: "threatmodels.yaml"
     metadata-filename: "metadata.yaml"
     approved-status: {{ translate.approved }}
+    write-plain-model: True
   check:
     approval-expiry-days: 365
   output:
