Add support for response in yaml and convert supporting different metadata output options

--- a/convertors/convertors_texts.yaml
+++ b/convertors/convertors_texts.yaml
@@ -1,5 +1,5 @@
 ---
 output-texts:
   default:
-    success: "Successfully converted document '{{ docloc }}' using scheme '{{ scheme }}'"
-    unknown-doc-storage: "Unknown document storage type '{{ doc_storage }}' in scheme '{{ scheme }}'"
+    success: "Successfully converted document '{{ request.docloc }}' using scheme '{{ request.scheme }}'"
+    unknown-doc-storage: "Unknown document storage type '{{ doc_storage }}' in scheme '{{ request.scheme }}'"
