--- a/schemes/googledoc-scheme-1.0.yaml
+++ b/schemes/googledoc-scheme-1.0.yaml
@@ -398,7 +398,7 @@ scheme:
                             get-data:
                               - query:
                                   type: value-extract
-                                  regex: "^(\\w):(.*)"
+                                  regex: "^(\\w+):(.*)"
                                   # group: 0 matches the whole string if it matches at all, so group: 1 is the first group i the regex
                                   group: 1
                               - query:
@@ -418,7 +418,7 @@ scheme:
                             get-data:
                               query:
                                 type: value-extract
-                                regex: "^(\\w):(.*)"
+                                regex: "^(\\w+):(.*)"
                                 group: 2
                   - key: storage-locations
                     value: 
@@ -492,7 +492,7 @@ scheme:
                             get-data:
                               - query:
                                   type: value-extract
-                                  regex: "^(\\w):(.*)"
+                                  regex: "^(\\w+):(.*)"
                                   # group: 0 matches the whole string if it matches at all, so group: 1 is the first group in the regex
                                   group: 1
                             output-data:
@@ -509,7 +509,7 @@ scheme:
                             get-data:
                               query:
                                 type: value-extract
-                                regex: "^(\\w):(.*)"
+                                regex: "^(\\w+):(.*)"
                                 group: 2
                   - key: storage-locations
                     value: 
