Missed commit for improved handling of missing docs

--- a/convertors/convertors_texts.yaml
+++ b/convertors/convertors_texts.yaml
@@ -3,3 +3,4 @@ output-texts:
   default:
     success: "Successfully converted document '{{ request.docloc }}' using scheme '{{ request.scheme }}'"
     unknown-doc-storage: "Unknown document storage type '{{ doc_storage }}' in scheme '{{ request.scheme }}'"
+    not-found: "Could not find document with ID '{{ ID }}' using URL '{{ url }}'"
